# NekoTerm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  DISCLAIMER.md  INSTALL.md  USAGE.md
scripts/: install.ps1  install.sh  install_ios.sh  neko-ios.sh  uninstall.ps1  uninstall.sh  update.sh
src/neko/: __init__.py  __main__.py  config.py  exceptions.py
src/neko/cli/: __init__.py  modes.py
src/neko/core/: base_provider.py  library.py  player.py  ui.py
src/neko/providers/: animeflv.py  jkanime.py  monoschinos.py  tioanime.py
src/neko/utils/: anilist.py  helpers.py  http.py  logging_setup.py  paths.py
tests/: test_config.py  test_exceptions.py  test_http.py  test_library.py
